zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/enum_backed_by_comptime_int.zig
const E = enum(comptime_int) { a };
comptime {
    _ = E.a;
}

// error
//
// :1:16: error: expected integer tag type, found 'comptime_int'
